Version 5.1.1
- Added QCOS and QSIN to Spin2
- Added _execve() and CHAIN functions to chain programs
- Fixed handling of getcwd for subdirectories
- Fixed handling of DEL in fgets() function
- Made EXIT LOOP a synonym for EXIT DO

Version 5.1.0
- Added support for Spin2 constants clkmode_ and clkfreq_
- Added built in ASMCLK macro for Spin2
- Added CALL statement in BASIC
- Added improved error handling for BASIC
- Allow semicolons to seperate lines in C inline assembly (this makes it possible to put inline assembly in macros)
- Fixed another optimizer issue affecting C struct returns
- Fixed undefined _basic_print_unsigned error.
- Fixed a bug with pin ranges where the limits are variables and are given in (lo, hi) order
- Fixed bitfields in C structs being multiply defined
- Fixed sscanf() and similar string functions not working
- Fixed type of RECV() pointer in Spin2
- Fixed isprint() function in C
- Implemented FRAC operator for P1
- Implemented new (more accurate) IEEE floating point math routines
- Increased default buffer size for I/O on P2 (speeds up 9p operations)
- Made "append" mode force seeks to end of file before writes
- Made "_waitms" and "_waitus" work for long waits (more than a system counter rollover)
- More improvements to the BASIC strings library, again courtesy of JRoark
- New functions __builtin_frac, __builtin_mulh and __builin_muluh for C
- Put a "nop" at P2 address 0, so NULL pointers will act like empty strings

Version 5.0.8
- Added a warning for casting const pointers to non-const
- Added missing tan function to math.h
- Fixed Spin2 pinread to work correctly with multiple pins
- Fixed an optimizer bug that could cause corruption of small multi-word structs being returned from a C function
- Properly implemented compile time optimization of BASIC ASC("x") function
- New BASIC string functions from JRoark: improved implementations of some existing functions, and added functions CountStr, RemoveChar$, ReplaceChar$, and StrInt$
